# rp2040-freertos-template-smp

./: CMakeLists.txt  README.md
src/: main.c
